# appimage2rpm

./: .gitignore  README.md  appimage2rpm.py  appimage_utils.py  dependency_utils.py  directory_utils.py  pyproject.toml  repo_utils.py  requirements.txt  rpm_utils.py  setup.py.bak
.github/workflows/: python-ci.yml
src/appimage2rpm/: __init__.py  __main__.py
src/appimage2rpm/core/: __init__.py  builder.py  controller.py  dependency_analyzer.py  directory_packager.py  distro_profile.py  extractor.py  repo_manager.py
src/appimage2rpm/data/profiles/: fedora.json
src/appimage2rpm/gui/: __init__.py  about_dialog.py  converter_widget.py  logs_widget.py  main_window.py  profile_widget.py  repo_widget.py
src/appimage2rpm/utils/: __init__.py  file_utils.py  logger.py
tests/: test_builder.py  test_controller.py  test_extractor.py
