[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appimage2rpm"
version = "1.0.0"
description = "Convert AppImage packages to RPM format"
authors = [
    {name = "AppImage2RPM Team", email = "appimage2rpm@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
# Note: rpm-py-installer is excluded due to installation issues
# Install rpm bindings manually with: sudo dnf install python3-rpm or equivalent for your distro
dependencies = [
    "PySide6>=6.5.0",
    "click>=8.0.0",
    "toml>=0.10.2",
]
urls = {Homepage = "https://github.com/dem0n1337/appimage2rpm"}

[project.scripts]
appimage2rpm = "appimage2rpm.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 